--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "remond-app1",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -11,16 +10,25 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^3.3.6",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
+    "config": "^3.3.7",
+    "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.2",
+    "mongoose": "^6.2.10",
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "concurrently": "^6.2.1",
-    "nodemon": "^2.0.12"
-  }
+    "concurrently": "^6.5.1",
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ibrahim115/remond_project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ibrahim115/remond_project/issues"
+  },
+  "homepage": "https://github.com/ibrahim115/remond_project#readme",
+  "description": ""
 }
