--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
